--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 HomeworkBankAccount/HomeworkBankAccount.xcodeproj/project.xcworkspace/xcuserdata/ivanznak.xcuserdatad/UserInterfaceState.xcuserstate
 HomeworkBankAccount/HomeworkBankAccount.xcodeproj/xcuserdata
+HomeworkBankAccount/.DS_Store
